--- a/index.html
+++ b/index.html
@@ -73,17 +73,15 @@
                     <a href="#projects" class="btn secondary-btn">View My Work</a>
                 </div>
                 <div class="social-icons">
-                    <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/sowmiya-murugan-779002157/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="#" target="_blank"><i class="fas fa-envelope"></i></a>
+                    <a href="mailto:sowmi98143@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
             <div class="hero-image">
                 <div class="image-container">
-                    <!-- Professional headshot from Unsplash -->
-                    <!-- <img src="assets/profile.jpg" alt="Sowmiya's Profile Picture"> -->
-                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
-                        alt="Sowmiya's Profile Picture">
+                    <!-- Professional headshot -->
+                    <img src="assets/images/sowmiya.jpeg" alt="Sowmiya's Profile Picture">
                 </div>
             </div>
         </div>
@@ -381,7 +379,7 @@
             </div>
 
             <!-- Certifications & Learning -->
-            <div class="certifications-learning">
+            <div id="certifications" class="certifications-learning">
                 <h3 class="subsection-title">Professional Certifications & Learning</h3>
                 <div class="cert-learning-grid">
                     <a href="https://www.credly.com/badges/b8617bf4-10c2-4641-8c2e-2e0f10a3bd3e/public_url" target="_blank" class="cert-learning-item">
@@ -757,7 +755,7 @@
                 <div class="social-compact">
                     <span class="social-label">Connect:</span>
                     <div class="social-links-compact">
-                        <a href="#" target="_blank" class="social-btn" title="LinkedIn">
+                        <a href="https://www.linkedin.com/in/sowmiya-murugan-779002157/" target="_blank" class="social-btn" title="LinkedIn">
                             <i class="fab fa-linkedin"></i>
                         </a>
                         <a href="#" target="_blank" class="social-btn" title="GitHub">
@@ -766,7 +764,7 @@
                         <a href="#" target="_blank" class="social-btn" title="Twitter">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="#" target="_blank" class="social-btn" title="Email">
+                        <a href="mailto:sowmi98143@gmail.com" target="_blank" class="social-btn" title="Email">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
@@ -793,9 +791,9 @@
                 <a href="#contact">Contact</a>
             </div>
             <div class="footer-social">
-                <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/sowmiya-murugan-779002157/" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="#" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:sowmi98143@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
         <div class="footer-bottom">
