Commented Github code option

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/sowmiya-murugan-779002157/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/Sowmiya1408" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="mailto:sowmi98143@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
@@ -447,7 +447,7 @@
                             <span class="tech-tag secondary">Security</span>
                         </div>
                     </div>
-                    <div class="project-footer">
+                    <!-- <div class="project-footer">
                         <div class="project-links">
                             <a href="#" class="project-link">
                                 <i class="fab fa-github"></i>
@@ -458,7 +458,7 @@
                                 <span>Demo</span>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="project-card">
@@ -478,7 +478,7 @@
                             <span class="tech-tag secondary">Networking</span>
                         </div>
                     </div>
-                    <div class="project-footer">
+                    <!-- <div class="project-footer">
                         <div class="project-links">
                             <a href="#" class="project-link">
                                 <i class="fab fa-github"></i>
@@ -489,7 +489,7 @@
                                 <span>Demo</span>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="project-card">
@@ -509,7 +509,7 @@
                             <span class="tech-tag secondary">DevSecOps</span>
                         </div>
                     </div>
-                    <div class="project-footer">
+                    <!-- <div class="project-footer">
                         <div class="project-links">
                             <a href="#" class="project-link">
                                 <i class="fab fa-github"></i>
@@ -520,7 +520,7 @@
                                 <span>Demo</span>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
 
                 <div class="project-card featured">
@@ -542,7 +542,7 @@
                             <span class="tech-tag secondary">MLOps</span>
                         </div>
                     </div>
-                    <div class="project-footer">
+                    <!-- <div class="project-footer">
                         <div class="project-links">
                             <a href="#" class="project-link">
                                 <i class="fab fa-github"></i>
@@ -553,7 +553,7 @@
                                 <span>Demo</span>
                             </a>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -597,12 +597,12 @@
                             <span class="tech-tag">Excel</span>
                             <span class="tech-tag secondary">Cost Analytics</span>
                         </div>
-                        <div class="card-actions">
+                        <!-- <div class="card-actions">
                             <a href="#" class="action-btn primary-action">
                                 <i class="fab fa-github"></i>
                                 <span>View Code</span>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
@@ -630,12 +630,12 @@
                             <span class="tech-tag azure">Synapse</span>
                             <span class="tech-tag">Databricks</span>
                         </div>
-                        <div class="card-actions">
+                        <!-- <div class="card-actions">
                             <a href="#" class="action-btn primary-action">
                                 <i class="fab fa-github"></i>
                                 <span>View Code</span>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
@@ -666,12 +666,12 @@
                             <span class="tech-tag">Data Visualization</span>
                             <span class="tech-tag secondary">Analytics</span>
                         </div>
-                        <div class="card-actions">
+                        <!-- <div class="card-actions">
                             <a href="#" class="action-btn primary-action">
                                 <i class="fab fa-github"></i>
                                 <span>View Code</span>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
@@ -707,12 +707,12 @@
                             <span class="tech-tag ai">ChatGPT</span>
                             <span class="tech-tag secondary">Financial Analytics</span>
                         </div>
-                        <div class="card-actions">
+                        <!-- <div class="card-actions">
                             <a href="#" class="action-btn primary-action">
                                 <i class="fab fa-github"></i>
                                 <span>View Code</span>
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -743,13 +743,13 @@
                         </div>
                     </div>
                     
-                    <div class="contact-item-compact">
+                    <!-- <div class="contact-item-compact">
                         <i class="fas fa-map-marker-alt"></i>
                         <div class="contact-text">
                             <span class="contact-label">Location</span>
                             <span class="contact-value">Cleveland, OH</span>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 
                 <div class="social-compact">
@@ -758,12 +758,12 @@
                         <a href="https://www.linkedin.com/in/sowmiya-murugan-779002157/" target="_blank" class="social-btn" title="LinkedIn">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="#" target="_blank" class="social-btn" title="GitHub">
+                        <a href="https://github.com/Sowmiya1408" target="_blank" class="social-btn" title="GitHub">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="#" target="_blank" class="social-btn" title="Twitter">
+                        <!-- <a href="#" target="_blank" class="social-btn" title="Twitter">
                             <i class="fab fa-twitter"></i>
-                        </a>
+                        </a> -->
                         <a href="mailto:sowmi98143@gmail.com" target="_blank" class="social-btn" title="Email">
                             <i class="fas fa-envelope"></i>
                         </a>
@@ -792,7 +792,7 @@
             </div>
             <div class="footer-social">
                 <a href="https://www.linkedin.com/in/sowmiya-murugan-779002157/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Sowmiya1408" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="mailto:sowmi98143@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
